--- a/index.html
+++ b/index.html
@@ -3,37 +3,31 @@
     <title>Mobile Firts</title>
     <link href="./styles/reset.css"rel="stylesheet"/>
     <link href="./styles/styles.css"rel="stylesheet"/>
-    <link rel = "preconnect" href = "https://fonts.googleapis.com">
-    <link rel = "preconnect" href = "https://fonts.gstatic.com"   crossorigin>
     <link href = "https: //fonts.googleapis.com/css2? family = Montserrat: wght @ 700 & display = swap "rel ="stylesheet">
   </head>
   <body>
     <section class="hero">
-      <div>
-        <div class="hero__box">
-          <h1 class="hero__title">We Ensure A Best Insurance Service</h1>
-          <p class="hero__subtitle">We know how large objects will act, but things on a small scale just do not act that way.</p>
-          <div class="hero__button">
-            <a class="button" href="#">Get Quote Now</a>
-            <a class="button button--inverted" href="#">Learn More</a>
-          </div>
-          <div class="hero__card__main">
-            <div class="hero__card">
-              <img src="./images/user-blue.png">
-              <p class="hero__card__title">Peace of Mind</p>
-              <p class="hero__card__subtitle">the quick fox jumps over the lazy dog</p>
-            </div>
-            <div class="hero__card">
-              <img src="./images/user-blue.png">
-              <p class="hero__card__title">Set For Life</p>
-              <p class="hero__card__subtitle">the quick fox jumps over the lazy dog</p>
-            </div>
-            <div class="hero__card--inverted">
-              <img src="./images/user-white.png">
-              <p class="hero__card__title--inverted">100% Satisfaction</p>
-              <p class="hero__card__subtitle--inverted">the quick fox jumps over the lazy dog</p>
-            </div>
-          </div>
+      <h1 class="hero__title">We Ensure A Best Insurance Service</h1>
+      <p class="hero__subtitle">We know how large objects will act, but things on a small scale just do not act that way.</p>
+      <div class="hero__button">
+        <a class="button" href="#">Get Quote Now</a>
+        <a class="button button--inverted" href="#">Learn More</a>
+      </div>
+      <div class="hero__card">
+        <div class="hero__card__main">
+          <img src="./images/user-blue.png">
+          <p class="hero__card__title">Peace of Mind</p>
+          <p class="hero__card__subtitle">the quick fox jumps over the lazy dog</p>
+        </div>
+        <div class="hero__card__main">
+          <img src="./images/user-blue.png">
+          <p class="hero__card__title">Set For Life</p>
+          <p class="hero__card__subtitle">the quick fox jumps over the lazy dog</p>
+        </div>
+        <div class="hero__card--inverted">
+          <img src="./images/user-white.png">
+          <p class="hero__card__title--inverted">100% Satisfaction</p>
+          <p class="hero__card__subtitle--inverted">the quick fox jumps over the lazy dog</p>
         </div>
       </div>
     </section>
@@ -59,24 +53,22 @@
     </section>
 
     <section class="depositions">
-      <div class="depositions__box">
-        <h1 class="depositions__title">Industry</h1>
-        <p class="depositions__subtitle">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics</p>
-      </div>
+      <h1 class="depositions__title">Industry</h1>
+      <p class="depositions__subtitle">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics</p>
       <div class="depositions__main">
         <div class="depositions__card">
           <img class="depositions__image" src="./images/user-1.png">
-          <p class="depositions__card__text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+          <p class="depositions__text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           <img src="./images/stars.png">
         </div>
         <div class="depositions__card">
           <img class="depositions__image" src="./images/user-2.png">
-          <p class="depositions__card__text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+          <p class="depositions__text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           <img src="./images/stars.png">
         </div>
         <div class="depositions__card">
           <img class="depositions__image" src="./images/user-3.png">
-          <p class="depositions__card__text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+          <p class="depositions__text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           <img src="./images/stars.png">
         </div>
       </div>
@@ -120,123 +112,118 @@
         <p class="packages__subtitle">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics </p>
       </div>
       <div class="packages__card">
-        <div>
-          <div class="packages__card__box">
-            <p class="packages__card__title">FREE</p>
-            <p class="packages__card__subtitle">Organize across all <br> apps by hand</p>
-            <div class="packages__card__container">
-              <span class="packages__card__price">0</span>
-              <div class="packages__card__value">
-                <span class="packages__card__cifrao">$</span>
-                <span class="packages__card__month">Per Month</span>
-              </div>
+        <div class="packages__card__box">
+          <p class="packages__card__title">FREE</p>
+          <p class="packages__card__subtitle">Organize across all <br> apps by hand</p>
+          <div class="packages__card__container">
+            <span class="packages__card__price">0</span>
+            <div class="packages__card__value">
+              <span class="packages__card__cifrao">$</span>
+              <span class="packages__card__month">Per Month</span>
             </div>
-            <div>
-              <div class="packages__card__image">
-                <img src="./images/vector-ok.png">
-                <p>Unlimited product updates</p>
-              </div>
-              <div class="packages__card__image">
-                <img src="./images/vector-ok.png">
-                <p>Unlimited product updates</p>
-              </div>
-              <div class="packages__card__image">
-                <img src="./images/vector-ok.png">
-                <p>Unlimited product updates</p>
-              </div>
-              <div class="packages__card__image">
-                <img src="./images/vector-gray.png">
-                <p>1GB Cloud storage</p>
-              </div>
-              <div class="packages__card__image">
-                <img src="./images/vector-gray.png">
-                <p>Email and community support</p>
-              </div>
+          </div>
+          <div>
+            <div class="packages__card__image">
+              <img src="./images/vector-ok.png">
+              <p>Unlimited product updates</p>
             </div>
-            <div class="packages__card__button">
-              <a class="button" href="#">Try for free</a>
+            <div class="packages__card__image">
+              <img src="./images/vector-ok.png">
+              <p>Unlimited product updates</p>
             </div>
+            <div class="packages__card__image">
+              <img src="./images/vector-ok.png">
+              <p>Unlimited product updates</p>
+            </div>
+            <div class="packages__card__image">
+              <img src="./images/vector-gray.png">
+              <p>1GB Cloud storage</p>
+            </div>
+            <div class="packages__card__image">
+              <img src="./images/vector-gray.png">
+              <p>Email and community support</p>
+            </div>
+          </div>
+          <div class="packages__card__button">
+            <a class="button" href="#">Try for free</a>
           </div>
         </div>
 
-        <div>
-          <div class="packages__card__box--inverted">
-            <p class="packages__card__title--inverted">STANDARD</p>
-            <p class="packages__card__subtitle--inverted">Organize across all <br> apps by hand</p>
-            <div class="packages__card__container">
-              <span class="packages__card__price">9.99</span>
-              <div class="packages__card__value">
-                <span class="packages__card__cifrao">$</span>
-                <span class="packages__card__month">Per Month</span>
-              </div>
+        <div class="packages__card__box--inverted">
+          <p class="packages__card__title--inverted">STANDARD</p>
+          <p class="packages__card__subtitle--inverted">Organize across all <br> apps by hand</p>
+          <div class="packages__card__container">
+            <span class="packages__card__price">9.99</span>
+            <div class="packages__card__value">
+              <span class="packages__card__cifrao">$</span>
+              <span class="packages__card__month">Per Month</span>
             </div>
-            <div>
-              <div class="packages__card__image">
-                <img src="./images/vector-ok.png">
-                <p>Unlimited product updates</p>
-              </div>
-              <div class="packages__card__image">
-                <img src="./images/vector-ok.png">
-                <p>Unlimited product updates</p>
-              </div>
-              <div class="packages__card__image">
-                <img src="./images/vector-ok.png">
-                <p>Unlimited product updates</p>
-              </div>
-              <div class="packages__card__image">
-                <img src="./images/vector-gray.png">
-                <p>1GB Cloud storage</p>
-              </div>
-              <div class="packages__card__image">
-                <img src="./images/vector-gray.png">
-                <p>Email and community support</p>
-              </div>
+          </div>
+          <div>
+            <div class="packages__card__image">
+              <img src="./images/vector-ok.png">
+              <p>Unlimited product updates</p>
             </div>
-            <div class="packages__card__button">
-              <a class="button" href="#">Try for free</a>
+            <div class="packages__card__image">
+              <img src="./images/vector-ok.png">
+              <p>Unlimited product updates</p>
             </div>
+            <div class="packages__card__image">
+              <img src="./images/vector-ok.png">
+              <p>Unlimited product updates</p>
+            </div>
+            <div class="packages__card__image">
+              <img src="./images/vector-gray.png">
+              <p>1GB Cloud storage</p>
+            </div>
+            <div class="packages__card__image">
+              <img src="./images/vector-gray.png">
+              <p>Email and community support</p>
+            </div>
+          </div>
+          <div class="packages__card__button">
+            <a class="button" href="#">Try for free</a>
           </div>
         </div>
 
         <div class="packages__card">
-          <div>
-            <div class="packages__card__box">
-              <p class="packages__card__title">PREMIUM</p>
-              <p class="packages__card__subtitle">Organize across all <br> apps by hand</p>
-              <div class="packages__card__container">
-                <span class="packages__card__price">19.99</span>
-                <div class="packages__card__value">
-                  <span class="packages__card__cifrao">$</span>
-                  <span class="packages__card__month">Per Month</span>
-                </div>
-              </div>
-              <div>
-                <div class="packages__card__image">
-                  <img src="./images/vector-ok.png">
-                  <p>Unlimited product updates</p>
-                </div>
-                <div class="packages__card__image">
-                  <img src="./images/vector-ok.png">
-                  <p>Unlimited product updates</p>
-                </div>
-                <div class="packages__card__image">
-                  <img src="./images/vector-ok.png">
-                  <p>Unlimited product updates</p>
-                </div>
-                <div class="packages__card__image">
-                  <img src="./images/vector-gray.png">
-                  <p>1GB Cloud storage</p>
-                </div>
-                <div class="packages__card__image">
-                  <img src="./images/vector-gray.png">
-                  <p>Email and community support</p>
-                </div>
-              </div>
-              <div class="packages__card__button">
-                <a class="button" href="#">Try for free</a>
+          <div class="packages__card__box">
+            <p class="packages__card__title">PREMIUM</p>
+            <p class="packages__card__subtitle">Organize across all <br> apps by hand</p>
+            <div class="packages__card__container">
+              <span class="packages__card__price">19.99</span>
+              <div class="packages__card__value">
+                <span class="packages__card__cifrao">$</span>
+                <span class="packages__card__month">Per Month</span>
               </div>
             </div>
+            <div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-ok.png">
+                <p>Unlimited product updates</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-gray.png">
+                <p>1GB Cloud storage</p>
+              </div>
+              <div class="packages__card__image">
+                <img src="./images/vector-gray.png">
+                <p>Email and community support</p>
+              </div>
+            </div>
+            <div class="packages__card__button">
+              <a class="button" href="#">Try for free</a>
+            </div>
           </div>
+        </div>
       </div>
     </section>
 
@@ -245,7 +232,7 @@
         <div class="world__center">
           <h1 class="world__title">We Have Branches All Over The World</h1>
           <p class="world__subtitle">The gradual accumulation of information about atomic and small-scale behaviour during the first quarter of the 20th century, which gave some indications about how small things do behave, produced an increasing confusion which was Heisenberg, and Born.</p>
-          </div>
+        </div>
         <div class="world__image">
           <img class="world__figure" src="./images/world.png">
         </div>
